Adding french translation

--- a/caseStudyWP_FN/06-chap6.Rmd
+++ b/caseStudyWP_FN/06-chap6.Rmd
@@ -1,72 +1,71 @@
 \pagebreak
 
-# LESSONS LEARNED FROM CASE STUDY APPLICATIONS
+# LEÇONS APPRISES DES APPLICATIONS DANS LE CADRE DES ÉTUDES DE CAS
 
-The three SMUs used as case studies were selected to represent a range of levels of data availability, ranging from data-rich to data-limited. For each case study, the set of LRP estimation methods considered (Table \@ref(tab:lrpapproaches)) was a function of available data and previously developed assessment methods for the SMU. Each case study section includes its own discussion section highlighting conclusions from that case study. In this section, we provide an summary of key lessons learned when looking across all three case studies. These lessons were used to inform the development of guidelines for defining LRPs for Pacific Salmon SMUs, as described in @holtGuidelinesDefiningLimitInpress.
-
-&nbsp;
-
-**Lesson 1: CU status-based LRPs based on the multidimensional algorithm within the Salmon Scanner could be readily estimated for all SMUs over a wide range of data availabilities, and were consistent with the multidimensional approach that has been developed for Wild Salmon Policy assessments.  This was not the case for aggregate abundance LRPs.**
-
-CU status-based LRPs based on the Salmon scanner could be applied in all three case studies; whereas aggregate-abundance methods required a strong positive relationship between observed aggregate abundance and the log-odds of all CUs being above their lower benchmarks (logistic regression LRP) and / or sufficient data to parameterize a population dynamics model (projection LRP).  While the Interior Fraser Coho case study met both of these requirements, WCVI Chinook could only meet the second, and ISC Chum could not meet either of them. The use of the Pacific Salmon Scanner tool to estimate multidimensional statuses for CU status-based LRPs was especially valuable for data-poor SMUs because it allowed a mix of data quality and benchmark types to be applied, depending on what was available for a given CU in a given year. For example, in the ISC Chum case study, applying the Salmon Scanner to develop CU status-based LRPs allowed all seven CUs to be included when assessing SMU status by using alternative trend-based metrics for CUs without percentile benchmarks. The ability to assess CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CUs with low levels of synchrony in which data deficient CUs cannot be represented by proxy, as was the case for ISC Chum. 
+Les trois UGS qui ont servi comme études de cas ont été sélectionnées pour représenter un éventail de niveaux de disponibilité des données, allant d’abondantes à limitées. Pour chaque étude de cas, l’ensemble des méthodes d’estimation des PRL considérées (tableau \@ref(tab:lrpapproaches)) dépendait des données disponibles et des méthodes d’évaluation déjà mises au point pour l’UGS. Chaque étude de cas comprend sa propre section de discussion mettant en évidence les conclusions qui lui sont propres. Dans la présente section, nous présentons un résumé des principales leçons apprises lors de l’examen des trois études de cas. Ces leçons ont servi à éclairer l’élaboration de lignes directrices visant la définition des PRL pour les UGS de saumons du Pacifique, comme décrit dans @holtGuidelinesDefiningLimitInpress.
 
 &nbsp;
 
-**Lesson 2: The development of metrics and benchmarks on the distribution of spawning within a CU is a high priority to support WSP status assessments, which in turn will support the development of CU status-based LRPs at the SMU-level.**
+**Leçon 1 : les PRL fondés sur l’état des UC d’après l’algorithme multidimensionnel de l’Explorateur pouvaient être facilement estimés pour toutes les UGS sur un large éventail de disponibilités de données, et ils étaient conformes à l’approche multidimensionnelle qui a été élaborée pour les évaluations selon la PSS. Ce n’était pas le cas pour les PRL fondés sur l’abondance agrégée.**
 
-Both the Interior Fraser Coho and WCVI Chinook case studies applied LRP estimation methods that considered the distribution of spawning abundance among smaller sub-units within CUs; however, different approaches were used in each case. For Interior Fraser Coho, we relied on previously established distributional targets that recognized the biological importance of maintaining spawning abundance within 11 identified sub-populations nested within the 5 CUs. For WCVI Chinook, expert opinion brought into the development of the case study identified inlets as an important spatial scale of diversity for the SMU (D. McHugh pers. comm. DFO South Coast Stock Assessment). As a result, LRPs were developed to preserve inlet-scale diversity for this case study instead of CU-scale diversity.  
-
-Future research is needed to develop and evaluate distributional metrics and associated benchmarks that delineate WSP status zones.  The establishment of distributional benchmarks would allow the distribution of spawning abundance within a CU to be directly incorporated into multidimensional WSP status assessments, which in turn would enable a standardized approach to considering finer-scale spawning distribution when identifying LRPs at the SMU-level.
+Les PRL fondés sur l’état des UC d’après l’Explorateur ont pu être appliqués aux trois études de cas, tandis que les méthodes fondées sur l’abondance agrégée exigeaient une forte relation positive entre l’abondance agrégée observée et les logarithmes du rapport des cotes que toutes les UC se trouvent au-dessus de leur PRI (PRL de régression logistique) ou qu’il y ait assez de données sur les UC pour paramétrer un modèle de dynamique de la population (PRL de projection). Bien que l’étude de cas sur le saumon coho du Fraser intérieur satisfaisait à ces deux exigences, celle qui portait sur le saumon chinook de la COIV ne pouvait répondre qu’à la deuxième, et celle sur le saumon kéta de la CSI ne pouvait satisfaire à aucune de ces exigences. L’utilisation de l’Explorateur pour estimer les états multidimensionnels des PRL fondés sur l’état des UC a été particulièrement utile pour les UGS à données limitées, car elle a permis d’appliquer une combinaison de la qualité des données et des types de points de référence, selon ce qui était disponible pour une UC donnée au cours d’une année donnée. Par exemple, dans l’étude de cas sur le saumon kéta de la CSI, l’application de l’Explorateur pour élaborer des PRL fondés sur l’état des UC a permis d’inclure les sept UC au moment d’évaluer l’état à l’échelle de l’UGS en utilisant d’autres paramètres fondés sur les tendances pour les UC sans points de référence fondés sur le centile. La capacité d’évaluer les UC sans PRI fondé sur l’abondance est particulièrement importante lorsqu’une UGS est composée d’UC ayant de faibles niveaux de synchronie dans lesquels les UC présentant des lacunes en matière de données ne peuvent être représentées par substitution, comme ce fut le cas pour le saumon kéta de la CSI. 
 
 &nbsp;
 
-**Lesson 3: Annual status estimates from aggregate abundance LRPs and CU status-based LRPs will differ from each other in some cases.**
+**Leçon 2 : l’élaboration de paramètres et de points de référence sur la répartition des géniteurs d’une UC est une priorité élevée pour faciliter les évaluations de l’état selon la PSS qui, à leur tour, appuieront l’élaboration de PRL fondés sur l’état des UC à l’échelle de l’UGS.**
 
-While annual status estimates from aggregate abundance methods were generally consistent with estimates from CU status-based methods using the recommended Salmon Scanner tool, they did not always match. For the Interior Fraser Coho case study, status tended to drop below CU status-based LRPs when abundance of individual CUs was low, and drop below aggregate abundance LRPs when aggregate abundances were low.  While these conditions corresponded in most years, they did not always. For our case study on Interior Fraser River Coho, we found that the proportion of years with matching status estimates for CU status-based and aggregate abundance LRPs ranged from 72-86%, depending on the method used to estimate CU status.
+Les études de cas sur le saumon coho du Fraser intérieur et sur le saumon chinook de la COIV ont appliqué des méthodes d’estimation du PRL qui tenaient compte de la répartition de l’abondance des géniteurs entre les petites sous-unités au sein des UC; cependant, différentes approches ont été utilisées dans chaque cas. Pour le saumon coho du Fraser intérieur, nous nous sommes appuyés sur des cibles de répartition établies antérieurement qui reconnaissaient l’importance biologique du maintien de l’abondance des géniteurs dans onze sous-populations recensées nichant dans les cinq UC. Dans le cas du saumon chinook de la COIV, l’avis d’experts pris en compte dans l’élaboration de l’étude de cas a déterminé que les inlets constituaient une importante échelle spatiale de diversité pour l’UGS (D. McHugh, comm. pers., Évaluation des stocks de la côte sud du MPO). Par conséquent, les PRL ont été établis de manière préserver la diversité à l’échelle des inlets plutôt qu’à l’échelle de l’UC pour cette étude de cas.  
 
-&nbsp;
-
-**Lesson 4:  Data from all component CUs should be used whenever possible. When data are missing from one or more CUs, careful consideration should be given to the question of whether status can be inferred from other CUs within the SMU.  While there may be cases where inference is possible, uncertainty in resulting status estimates will increase, and this uncertainty should be clearly communicated in status assessments.**
-
-In the case of ISC Chum, using data from all seven CUs when available (even if only a subset of years) resulted in status dropping below the LRP more frequently than when only a subset of CUs was used in all years. This result occurs because, for CU status-based LRPs, there is an asymmetry in how missing CUs may affect SMU status relative to the LRP. Adding additional CUs may decrease status from above to below the LRP if the additional CU is Red and all other CUs are Amber or Green. However, adding an additional CU will never increase status from below to above an LRP because if a Red CU already exists; the 100% threshold for all CUs to be above Red cannot be met in this case. Given that ISC Chum CUs have low correlations in among-CU spawner abundances over time, and experience different environmental drivers in their freshwater habitats, inferring status of missing CUs from other CUs with data is not recommended. Therefore, status estimates that only include a portion of CUs are potentially biased.  
-
-In the case of Interior Fraser Coho, results from missing data scenarios for the logistic regression approach showed that it may be possible to use data-rich CUs as indicators for CUs with missing data.  However, logistic regression-based LRPs were more uncertain when more than 1 CUs was missing, and the logistic regression model frequently failed to converge, so caution should be used when applying this method to SMUs with missing data.  Furthermore, Interior Fraser Coho display higher levels of among-CU correlations in spawner abundances over time that ISC Chum, so the extent to which this result can be applied to other SMUs is expected to be dependent on the level of covariation in CU status among CUs within an SMU.
+Des recherches futures sont nécessaires pour élaborer et évaluer des paramètres de répartition et des points de référence connexes qui délimitent les zones d’état selon la PSS. L’établissement de points de référence distributionnels permettrait d’intégrer directement la répartition de l’abondance des géniteurs au sein d’une UC dans les évaluations multidimensionnelles de l’état selon la PSS, ce qui permettrait à son tour d’adopter une approche normalisée pour considérer la répartition des géniteurs à une échelle plus petite lors de la détermination des PRL à l’échelle de l’UGS.
 
 &nbsp;
 
-**Lesson 5: Logistic regression LRPs have several limitations and should only be used when (i) aggregate abundance LRPs are required and (ii) all assumptions of the logistic regression model can be met.**
+**Leçon 3 : dans certains cas, les estimations annuelles de l’état des PRL fondés sur l’abondance agrégée et des PRL fondés sur l’état des UC seront différentes les unes des autres.**
 
-Logistic regression LRPs are empirically derived from past observations of SMU abundance and CU statuses. By fitting a logistic regression to historical data, we identified historical abundance levels associated with probabilities that all component CUs have statuses above their lower benchmarks. Similar to the CU status-based LRP, this aggregate abundance method depends on the outcomes of individual CU assessments, which are sensitive to structural assumptions underlying the CU-level benchmarks and data availability.
-
-
-Logistic regression-based LRPs could only be estimated for one of our three case study SMUs, which suggests that they may only be an option for a small proportion of SMUs.  Even for Interior Fraser Coho where a logistic regression fit was possible, estimates did not converge for all retrospective years, and status estimates were sensitive to missing data. Taken together, our exploration of logistic regression LRPs for our three case studies highlighted some limitations of this approach.
-
-
-First, logistic regression LRPs are limited to conditions that have been historically observed. This can be a problem when there is poor contrast in historical data, as was the case for WCVI Chinook.  In this case, there were no years when all component inlets exceeded their lower benchmarks. However, similar challenges could occur in cases where no CUs drop below their lower benchmarks.  The dependence on historically observed conditions is a further limitation when there have been changes in the correlation in populations dynamics among CUs over time such that current (or future) correlations are not represented by historical data.
-
-
-Second, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated.  Here, we found that logistic regression LRPs could be estimated for Interior Fraser Coho (average correlation in spawner abundances among CUs of 0.56), but not for Inside South Coast Chum (average correlation among CUs of 0.12). Also, the wide range in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in Section \@ref(MethodsChapter) can be used to support or reject logistic regression LRPs. We illustrate how these diagnostics are used to evaluate model fit in Sections \@ref(IFCChapter) and \@ref(ISCchumChapter).    
-
-Finally, preliminary analyses of logistic regression LRPs for Fraser River Sockeye Salmon (not presented in this paper) showed that the method was not easily applied to cyclic stocks.  
+Bien que les estimations annuelles de l’état obtenues des méthodes fondées sur l’abondance agrégée étaient généralement cohérentes avec les estimations des méthodes fondées sur l’état des UC à l’aide de l’Explorateur recommandé, elles ne concordaient pas toujours. Pour l’étude de cas sur le saumon coho du Fraser intérieur, l’état a eu tendance à chuter sous le PRL fondé sur l’état des UC lorsque l’abondance des UC individuelles était faible, et à descendre sous le PRL fondé sur l’abondance agrégée lorsque l’abondance agrégée était faible. Bien que ces conditions aient correspondu la plupart des années, cela n’a pas toujours été le cas. Dans le cadre de notre étude de cas sur le saumon coho du Fraser intérieur, nous avons constaté que la proportion d’années pour lesquelles les estimations de l’état correspondaient aux PRL fondés sur l’état des UC et sur l’abondance agrégée variait de 72 à 86 %, selon la méthode utilisée pour estimer l’état des UC.
 
 &nbsp;
 
-**Lesson 6: Stochastic projections can be used to estimate aggregate abundance LRPs under various assumptions about population dynamics and covariance in dynamics among CUs. This approach allows uncertainties in our understanding of population dynamics to be represented in a more comprehensive way than other LRP methods.**
+**Leçon 4 : dans la mesure du possible, il faut utiliser les données de toutes les UC constituantes. Lorsqu’il manque des données sur une ou plusieurs UC, il faut examiner attentivement s’il est possible de déduire l’état à partir d’autres UC de l’UGS. Bien qu’il puisse y avoir des cas où cette déduction est possible, l’incertitude entourant les évaluations de l’état ainsi obtenues sera plus grande et il faudra clairement indiquer cette incertitude dans les évaluations de l’état.**
 
-Projection LRPs rely on closed-loop simulation models to quantify the emergent relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirements for this approach are CU-specific estimates of stock-recruitment parameters (productivity and capacity) and covariance in recruitment among CUs. Parameter estimates for productivity and capacity can be based on posterior distributions from stock-recruitment analyses (see Interior Fraser Coho case study, Section \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook case study, Section \@ref(WCVIchinookChapter)). 
+Dans le cas du saumon kéta de la CSI, l’utilisation des données des sept UC lorsqu’elles étaient disponibles (même s’il ne s’agissait que d’un sous-ensemble d’années) a entraîné une chute de l’état sous le PRL plus fréquemment que lorsqu’un sous-ensemble d’UC seulement était utilisé pour toutes les années. Ce résultat s’explique par le fait que, dans le cas des PRL fondés sur l’état des UC, il y a une asymétrie dans la façon dont les UC manquantes peuvent avoir une incidence sur l’état à l’échelle de l’UGS par rapport au PRL. L’ajout d’UC peut faire passer l’état des UC d’au-dessus à au-dessous du PRL si l’état d’une UC supplémentaire est en zone rouge et que l’état de toutes les autres UC est en zone ambre ou verte. Toutefois, l’ajout d’une UC ne fera jamais passer l’état d’au-dessous à au-dessus du PRL, car si l’état d’une UC est déjà en zone rouge, le seuil de 100 % de toutes les UC dont l’état se trouve au-dessus de la zone rouge ne peut pas être atteint dans ce cas. Étant donné que les UC de saumon kéta de la CSI présentent de faibles corrélations entre l’abondance des géniteurs au fil du temps et qu’elles présentent différents facteurs environnementaux dans leurs habitats d’eau douce, il n’est pas recommandé de déduire l’état des UC manquantes à partir d’autres UC comportant des données. Par conséquent, les estimations de l’état qui comprennent seulement une partie des UC sont potentiellement biaisées.  
 
-
-Furthermore, we demonstrated an approach to choosing parameters and model assumptions used in the projections so that correlations in spawner abundances in projections were similar to observed correlations. We recommend that correlations in CUs within projections are explored under various model assumptions, and that model parameters are tuned to derive realistic correlations.
-
-
-The projection LRP approach is flexible in that allows for consideration of structural uncertainty in SMU population dynamics through the consideration of alternative scenarios. For example, for the WCVI Chinook case study, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and variability in exploitation among inlets. For the Interior Fraser Coho study case, structural uncertainty in the formulation of the stock-recruit model was considered through alternative projection scenarios. In this case, we demonstrated how a model-averaging approach could be used to combine projections from these two scenarios into a single LRP.  
-
-
-Future implementations of projection LRPs could also consider temporal shifts in stock-recruitment parameters, the potential for depensatory population dynamics at low population size, and future variability in fishery exploitation rates. Decisions about which scenarios to consider should be made on a case-by-case basis, and should be dependent on current understandings of key uncertainties for each SMU.
+Dans le cas du saumon coho du Fraser intérieur, les résultats des scénarios de données manquantes pour l’approche de régression logistique ont montré qu’il pourrait être possible d’utiliser des UC à données abondantes comme indicateurs pour les UC pour lesquelles il manque des données.  Cependant, les PRL fondés sur la régression logistique étaient plus incertains lorsque plus d’une UC manquait, et le modèle de régression logistique ne convergeait souvent pas; il faut donc faire preuve de prudence lorsqu’on applique cette méthode aux UGS pour lesquelles il manque de données. De plus, le saumon coho du Fraser intérieur affiche des niveaux plus élevés de corrélation entre les UC dans l’abondance des géniteurs au fil du temps que le saumon kéta de la CSI, de sorte que la mesure dans laquelle ce résultat peut être appliqué à d’autres UGS devrait dépendre du niveau de covariance de l’état entre les UC au sein d’une UGS.
 
 &nbsp;
 
-**Lesson 7: Projection LRPs are highly sensitive to exploitation rates**
+**Leçon 5 : les PRL de régression logistique comportent plusieurs limites et ne doivent être utilisés que lorsque (i) des PRL fondés sur l’abondance agrégée sont nécessaires et (ii) toutes les hypothèses du modèle de régression logistique peuvent être respectées.**
 
-Sensitivity analyses showed that projection LRPs are sensitive to the assumed levels of exploitation in the projections. Higher exploitation rates resulted in higher required SMU aggregate abundance to ensure that all CUs remain above their lower benchmarks. The sensitivity to exploitation rate increases as variability in stock-recruitment parameters among CUs increase and as uncertainty in parameter estimates increase. This property of projection LRPs is explored in Appendix \@ref(app:ERsensitivity-appendix). Therefore projection LRPs developed under historical and current exploitation rates cannot necessarily be used as a basis for evaluating alternative management procedures. However demonstrating the changes in aggregate abundances required for all CUs to be above lower benchmarks (i.e. changes in projection LRP) under different exploitation scenarios may help analysts and managers understand the implications of changing exploitation rates on the ability to achieve WSP objectives.
+Les PRL de régression logistique sont calculés empiriquement à partir des observations antérieures de l’abondance à l’échelle de l’UGS et des états des UC. En ajustant une régression logistique aux données historiques, nous avons déterminé les niveaux d’abondance historiques associés aux probabilités que toutes les UC constituantes aient des états se trouvant au-dessus de leur PRI. À l’instar du PRL fondé sur l’état des UC, cette méthode fondée sur l’abondance agrégée dépend des résultats des évaluations d’UC individuelles, qui sont sensibles aux hypothèses structurelles sous-jacentes aux points de référence à l’échelle de l’UC et à la disponibilité des données.
 
+
+Les PRL de régression logistique n’ont pu être estimés que pour l’une des UGS étudiées, ce qui donne à penser qu’ils pourraient ne constituer une option que pour une petite proportion d’UGS. Même pour le saumon coho du Fraser intérieur, où un ajustement de régression logistique était possible, les estimations ne convergeaient pas pour toutes les années rétrospectives, et les estimations de l’état étaient sensibles aux données manquantes. Dans l’ensemble, notre examen des PRL de régression logistique pour nos trois études de cas a mis en évidence certaines limites de cette approche.
+
+
+Premièrement, les PRL de régression logistique se limitent aux conditions qui ont été observées par le passé. Cela peut poser un problème lorsqu’il y a un faible contraste dans les données historiques, comme ce fut le cas pour le saumon chinook de la COIV. Dans ce cas, il n’y a pas eu d’année où toutes les populations d’inlet constituantes ont dépassé leur PRI. Toutefois, des difficultés semblables pourraient survenir dans les cas où aucune UC ne chute au-dessous de son PRI. La dépendance aux conditions observées par le passé constitue une autre limite lorsqu’il y a eu des changements dans la corrélation de la dynamique de la population entre les UC au fil du temps, de sorte que les corrélations actuelles (ou futures) ne sont pas représentées par des données historiques.
+
+
+Deuxièmement, les diagnostics du modèle ne prennent pas en charge les régressions logistiques et leurs PRL associés lorsque les abondances à l’échelle de l'UC ne sont pas corrélées ou qu’elles le sont seulement faiblement. Ici, nous avons constaté que les PRL de régression logistique pouvaient être estimés pour le saumon coho du Fraser intérieur (corrélation moyenne de 0,56 pour l’abondance des géniteurs entre les UC), mais pas pour le saumon kéta de la CSI (corrélation moyenne de 0,12 entre les UC). De plus, la vaste gamme de productivités et de capacités entre les UC pour l’étude de cas sur le saumon kéta de la CSI a contribué à la faible relation entre l’abondance agrégée et les états à l’échelle de l’UC. En général, les diagnostics de modèle décrits à la section \@ref(MethodsChapter) peuvent être utilisés pour soutenir ou rejeter les PRL de régression logistique. Nous illustrons comment ces diagnostics sont utilisés pour évaluer l’adéquation du modèle aux sections \@ref(IFCChapter) et \@ref(ISCchumChapter).    
+
+Enfin, des analyses préliminaires des PRL de régression logistique pour le saumon rouge du Fraser (non présentées dans le présent document) ont montré que la méthode n’était pas facilement appliquée aux stocks cycliques.  
+
+&nbsp;
+
+**Leçon 6 : on peut recourir à des projections stochastiques pour estimer les PRL fondés sur l’abondance agrégée selon diverses hypothèses sur la dynamique de la population et la covariance de la dynamique entre les UC. Cette approche permet de représenter de façon plus exhaustive les incertitudes dans notre compréhension de la dynamique des populations que les autres méthodes de PRL.**
+
+Les PRL de projection s’appuient sur des modèles de simulation en boucle fermée pour quantifier la relation émergente entre les abondances agrégées à l’échelle de l’UGS et les probabilités que toutes les UC dépassent leur PRI, compte tenu d’un niveau d’exploitation prédéfini. Les exigences les plus importantes pour cette approche sont les estimations propres à l’UC des paramètres de stock-recrutement (productivité et capacité) et la covariance dans le recrutement entre les UC. Les estimations des paramètres pour la productivité et la capacité peuvent être fondées sur les distributions a posteriori à partir des analyses du stock-recrutement (voir l’étude de cas sur le saumon coho du Fraser intérieur, à la section \@ref(IFCChapter)) ou plus qualitativement à partir des commentaires d’experts, des modèles de l’étape du cycle de vie ou des estimations des modèles de la zone du bassin hydrographique (voir l’étude de cas sur le saumon chinook de la COIV, à la section \@ref(WCVIchinookChapter)). 
+
+
+De plus, nous avons démontré une approche servant à choisir les paramètres et les hypothèses de modèle utilisés dans les projections de sorte que les corrélations dans l’abondance des géniteurs dans les projections étaient semblables aux corrélations observées. Nous recommandons que les corrélations entre les UC dans les projections soient explorées dans le cadre de diverses hypothèses de modèle, et que les paramètres du modèle soient ajustés pour calculer des corrélations réalistes.
+
+
+L’approche des PRL de projection est souple, car elle permet de tenir compte de l’incertitude structurelle dans la dynamique des populations de l’UGS en tenant compte de scénarios de rechange. Par exemple, pour l’étude de cas sur le saumon chinook de la COIV, des analyses de sensibilité ont été effectuées pour évaluer les répercussions des corrélations dans les résidus du recrutement et la variabilité de l’exploitation entre les populations d’inlet. Dans le cas de l’étude sur le saumon coho du Fraser intérieur, l’incertitude structurelle dans la formulation du modèle de stock-recrutement a été prise en compte dans d’autres scénarios de projection. Dans ce cas, nous avons démontré comment une approche de calcul de la moyenne des modèles pourrait être utilisée pour combiner les projections de ces deux scénarios en un seul PRL.  
+
+
+Les futures mises en œuvre des PRL de projection pourraient également tenir compte des changements temporels dans les paramètres de stock-recrutement, de la possibilité d’une dynamique anticompensatoire pour une population de petite taille et de la variabilité future des taux d’exploitation des pêches. Les décisions sur les scénarios à prendre en considération doivent être prises au cas par cas et dépendre de la compréhension actuelle des principales incertitudes pour chaque UGS.
+
+&nbsp;
+
+**Leçon 7 : les PRL de projection sont très sensibles aux taux d’exploitation.**
+
+Les analyses de sensibilité ont montré que les PRL de projection sont sensibles aux niveaux d’exploitation supposés dans les projections. Des taux d’exploitation plus élevés ont donné lieu à une abondance agrégée requise plus élevée à l’échelle de l’UGS pour veiller à ce que toutes les UC demeurent au-dessus de leur PRI. La sensibilité au taux d’exploitation augmente à mesure que la variabilité des paramètres de stock-recrutement entre les UC augmente et que l’incertitude dans les estimations des paramètres augmente. Cette propriété des PRL de projection est explorée à l’annexe \@ref(app:ERsensitivity-appendix). Par conséquent, les PRL de projection établis en fonction des taux d’exploitation historiques et actuels ne peuvent pas nécessairement servir de base à l’évaluation de procédures de gestion de rechange. Toutefois, le fait de démontrer que les changements dans l’abondance agrégée requise pour que toutes les UC dépassent les PRI (c’est-à-dire les changements dans le PRL projeté) selon différents scénarios d’exploitation peut aider les analystes et les gestionnaires à comprendre les répercussions de l’évolution des taux d’exploitation sur la capacité d’atteindre les objectifs de la PSS.
